tests/NormalTests/paczka1/fuzzy1/27088175.err
Error in line 4: momFm3DWe A351 12,v
Error in line 3: Krf A357 43,9
Error in line 1: momFm3DWe A351 6,1
Error in line 6: Krf S215 31,0
Error in line 15: Krf 351 77,5
Error in line 11: Krf A351 20,3
Error in line 20: SObh6Q A357 3,4
Error in line 24: SObh6Q S113 61,9
